# curepy

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yml  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
curepy/: __init__.py
curepy/container/: ancillary_parameter.py  measurement.py  measurement_function.py  prior.py  retrieval_input.py  retrieval_result.py
curepy/container/tests/: test_ancillary_parameter.py  test_measurement.py  (+3 more)
curepy/lpu/: lpu_retrieval.py
curepy/mc/: MCMC_retrieval.py
curepy/retrieval_methods/: LPU.py  MCMC.py  OptimalEstimation.py  base.py  mcmc.py  optimal_estimation.py  retrieval_method_factory.py
curepy/utilities/: corner_edited.py  digital_effects_table_template.py  distributions.py  maths.py  plotting.py  utilities.py
curepy/utilities_old/: digital_effects_table_template.py  utilities_old.py
docs/: Makefile  conf.py  index.rst  make.bat
docs/content/: atbd.rst  getting_started.rst  theory.rst  usage.rst  user_guide.rst
examples/: MCMC_example.py  multidimensional_LPU_example.py  multidimensional_MCMC_example.py  simple_quadratic_LPU_example.py  simple_quadratic_MCMC_example.py
quality_documentation/: QualityDocumentation.tex  curepy_requirements.docx
quality_documentation/base/: CookiecutterMacros.tex
quality_documentation/uml/: curepy.uxf
runpy/: __init__.py
runpy/lpu/: lpu_retrieval.py
runpy/mc/: MCMC_retrieval.py
runpy_test/: __init__.py
runpy_test/mc/: MCMC_retrieval.py
runpy_test/utilities/: corner_edited.py  utilities.py
(+25 files in other folders)
